# RAG_chartbot

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_query_flow_integration.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
docs/: query_flow.mmd
frontend/: index.html  script.js  style.css
scripts/: format.sh  quality_check.sh  setup_hooks.sh
